# lagoon

./: .gitignore  QUICKSTART.md  README.md  export_changes.md  export_fields.md  lagoon_data_prob.md  pyproject.toml  requirements.txt  todo.md
data/: changes.md  manifest.json
src/lagoon/: __init__.py  _document.py  _errors.py  _hash.py  _keywords.py  _loader.py  _profiler.py  _scorer.py  _sentence.py  _stop_words.py  _text_result.py  _tokenizer.py  _types.py
src/lagoon/data/: manifest.json
src/lagoon/data_human/: manifest.json
src/lagoon/data_lookup/: manifest.json
tests/: conftest.py  test_benchmarks.py  test_document.py  test_hash.py  test_loader.py  test_lookup.py  test_retrieval_quality.py  test_scorer.py  test_sentence.py  test_tokenizer.py  test_vocab_extension.py
